updates to the gallery

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
 						<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 text-center">
 							<div class="image-slider">
 								<ul class="slides">
+									<li><img alt="Photo" src="img/gallery/tahoe.jpg"></li>
 									<li><img alt="Photo" src="img/gallery/3.jpg"></li>
 									<li><img alt="Photo" src="img/gallery/4.jpg"></li>
 									<li><img alt="Photo" src="img/gallery/5.jpg"></li>
@@ -109,6 +110,7 @@
 									<li><img alt="Photo" src="img/gallery/9.jpg"></li>
 									<li><img alt="Photo" src="img/gallery/IMG_1371.jpg"></li>
 									<li><img alt="Photo" src="img/gallery/IMG_1372.jpg"></li>
+									<li><img alt="Photo" src="img/gallery/katie.jpg"></li>
 									<li><img alt="Photo" src="img/gallery/11.jpg"></li>
 								</ul>
 							</div>
