lots of small changes

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/theme-rose.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/custom.css" rel="stylesheet" type="text/css" media="all"/>
-    	<link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700%7CLibre+Baskerville:400,400italic' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,700%7CLibre+Baskerville:400,400italic' rel='stylesheet' type='text/css'>
     </head>
     <body>
 
@@ -97,7 +97,7 @@
 						<div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1 text-center">
 							<div class="image-slider">
 								<ul class="slides">
-									<li><img alt="Photo" src="img/gallery/tahoe.jpg"></li>
+									<li><img alt="Photo" src="img/gallery/tahoe.JPG"></li>
 									<li><img alt="Photo" src="img/gallery/3.jpg"></li>
 									<li><img alt="Photo" src="img/gallery/4.jpg"></li>
 									<li><img alt="Photo" src="img/gallery/5.jpg"></li>
@@ -227,10 +227,9 @@
 				
 			</section>
 
-
+<!-- 
 			<section id="yaerafa" class="gallery gallery-2 overlay">
-				<div class="instafeed" data-query="yaerafa">
-					<ul></ul>
+				<div class="instafeed">
 				</div>
 			
 				<div class="container">
@@ -244,6 +243,7 @@
 					</div>
 				</div>
 			</section>
+-->
 			<!--<footer class="footer footer-1">
 				<div class="container">
 					<div class="row">
